@@ -1,3 +1,10 @@
+Wed Apr 16 00:05:47 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (define_program_variable): Added `override' argument.
+	(handle_texinfo): Pass override arg when defining MAKEINFO.
+	(AC_MISSING_PROG): New constant.
+	(scan_one_configure_file): Use it.
+
 Tue Apr 15 12:12:28 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_texinfo): In --cygnus mode, reserve
